# raffleize

./: .cabal-fmt-5126-bvn256kJKTmO  .cabal-fmt-5126-p39j5ZHrq9c1  .cz.toml  .dockerignore  .env_  .envrc  .gitignore  .justfile  CHANGELOG.md  Dockerfile  README.md  atlas_config.json.blockfrost  atlas_config.json.kupo  atlas_config.json.maestro  atlas_config.json.preprod  atlas_config.json.save  atlas_config.json2  cabal.project  flake.nix  flake.nix_  idealog.txt  marius.addr  marius.skey  marius.vkey  notite  q  raffleconfig.json  raffleize.cabal  raffleize.logo  raffleizeMintingPolicy.plutus  raffleizeValidator.plutus  raffleize_validators_config.json  swagger-api.json  ticketValidator.plutus
Documentation/: SRS_IEEE.md
Documentation/Diagrams/Class/: ClassDiagram-Raffleize.puml
Documentation/Diagrams/Component/: ComponentDiagram-RaffleDApp-HighLevel.puml  ComponentDiagram-RaffleDApp-version1.puml  ComponentDiagram-RaffleDApp-version2.puml  ComponentDiagram-RaffleDApp-version3.puml
Documentation/Diagrams/Mindmaps/: 1.Mindmap-U-CreateRaffle-Transaction.puml  10.Mindmap-TO-FullRefund-Transaction.puml  11.Mindmap-TO-ExtraRefund-Transaction.puml  12.Mindmap-RO-GetCollateraOfExpiredTicket.puml  13.Mindmap-TO-CollateralRefund-Transaction.puml  2.Mindmap-U-BuyTicket-Transaction.puml  3.Mindmap-RO-UpdateRaffle-Transaction.puml  4.Mindmap-RO-CancelRaffle-Transaction.puml  5.Mindmap-RO-CollectAccumulatedAmount.puml  6.Mindmap-RO-RecoverStake-Transaction.puml  7.Mindmap-RO-RecoverStakeAndAmount-Transaction.puml  8.Mindmap-TO-RevealSecret-Transaction.puml  9.Mindmap-TO-CollectPrize-Transaction.puml
Documentation/Diagrams/Sequence/: RaffleDApp-CreateRaffleSequence.puml
Documentation/Diagrams/State/: StateDiagram-RaffleOwner_Token.puml  StateDiagram-Raffle_State_Token.puml  StateDiagram-TicketOwner_Token.puml
Documentation/Diagrams/Usecase/: UsecaseDiagram-RaffleDApp.puml
Documentation/Diagrams/Wireframes/: UI-Dashboard-Auth.puml  UI-Dashboard-NonAuth.puml  UI-RaffleDetails-Commit.puml  UI-RaffleDetails-Reveal.puml  UI-RaffleProfile-Create.puml  UI-RaffleProfile-MyAssets.puml  UI-RaffleProfile-MyRaffles.puml  UI-RaffleProfile-MyTickets.puml
Documentation/Mermaid/State/: StateDiagram--RaffleState.md  StateDiagram-RaffleOwner_Token.md  StateDiagram-TicketOwner_Token.md
db/: kupo.sqlite3
purescript-bridge-generator/: Main.hs
rcli/: Main.hs
server/: Main.hs
src/: Prelude.hs
src/CodeGen/: PSTypes.hs  TypeBridges.hs
src/RaffleizeDApp/: Constants.hs  Utils.hs
src/RaffleizeDApp/CodeGen/: Main.hs  PSTypes.hs  TypeBridges.hs
src/RaffleizeDApp/CustomTypes/: ActionTypes.hs  RaffleTypes.hs  TicketTypes.hs  TransferTypes.hs  Types.hs
src/RaffleizeDApp/OnChain/: NFT.hs  RaffleizeLogic.hs  RaffleizeMintingPolicy.hs  RaffleizeTicketValidator.hs  RaffleizeValidator.hs  Utils.hs
src/RaffleizeDApp/Server/: API.hs  Main.hs  Queries.hs  RestAPI.hs  Types.hs  WebsocketsAPI.hs
src/RaffleizeDApp/TUI/: Actions.hs  Main.hs  RaffleizeWidgets.hs  Types.hs  UI.hs  Utils.hs
src/RaffleizeDApp/Tests/: Main.hs  PropertyTests.hs  RaffleizeTests.hs  TestRuns.hs  UnitTests.hs
src/RaffleizeDApp/TxBuilding/: Context.hs  Exceptions.hs  Interactions.hs  Lookups.hs  Operations.hs  RaffleizeLookups.hs  RaffleizeOperations.hs  RaffleizeSkeletons.hs  Skeletons.hs  Transactions.hs  Utils.hs  Validators.hs
src/TUI/: Actions.hs  UI.hs  Utils.hs
tui/: Main.hs
