cabal-version: 3.6
name:          raffleize
version:       2.0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- license:       MIT
-- license-file:  LICENSE
author:        Marius Georgescu
maintainer:    georgescumarius@live.com

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

common common
  default-language:   GHC2021
  build-depends:      base
  mixins:             base hiding (Prelude)
  ghc-options:
    -Wall -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr
    -fno-specialise -Wno-orphans -Wno-unused-local-binds
    -fconstraint-solver-iterations=0

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    FlexibleInstances
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

common plutus-ghc-options
  -- so unfoldings are present even when compiled without optmizations
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -Wno-partial-type-signatures

  -- expose all unfoldings, so plutustx compiler can do its job
  ghc-options:
    -fexpose-all-unfoldings -fobject-code -fplugin-opt
    PlutusTx.Plugin:defer-errors

  -- set target plutus-core version
  ghc-options: -fplugin-opt PlutusTx.Plugin:target-version=1.0.0

  -- Compiler flags
  ghc-options: -fplugin-opt PlutusTx.Plugin:no-remove-trace
  ghc-options: -fplugin-opt PlutusTx.Plugin:no-optimize

library
  import:          common, plutus-ghc-options
  exposed-modules:
    Prelude
    RaffleizeDApp.Constants
    RaffleizeDApp.CustomTypes.ActionTypes
    RaffleizeDApp.CustomTypes.RaffleTypes
    RaffleizeDApp.CustomTypes.TicketTypes
    RaffleizeDApp.CustomTypes.TransferTypes
    RaffleizeDApp.CustomTypes.Types
    RaffleizeDApp.OnChain.RaffleizeLogic
    RaffleizeDApp.OnChain.RaffleizeMintingPolicy
    RaffleizeDApp.OnChain.RaffleizeTicketValidator
    RaffleizeDApp.OnChain.RaffleizeValidator
    RaffleizeDApp.OnChain.Utils
    RaffleizeDApp.TxBuilding.Context
    RaffleizeDApp.TxBuilding.Exceptions
    RaffleizeDApp.TxBuilding.Interactions
    RaffleizeDApp.TxBuilding.Lookups
    RaffleizeDApp.TxBuilding.Operations
    RaffleizeDApp.TxBuilding.Skeletons
    RaffleizeDApp.TxBuilding.Transactions
    RaffleizeDApp.TxBuilding.Utils
    RaffleizeDApp.TxBuilding.Validators
    RaffleizeDApp.Utils

  -- Add new contracts here, i.e.:
  -- Contracts.MyContract
  other-modules:

  -- Sample contracts:
  hs-source-dirs:  src

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , cardano-api
    , cardano-binary
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

  build-depends:
    , aeson
    , extra
    , generic-arbitrary
    , mtl
    , swagger2
    , text

executable server
  import:         common
  main-is:        Main.hs
  hs-source-dirs: src/RaffleizeDApp/Server
  ghc-options:    -Werror -threaded -rtsopts -with-rtsopts=-T
  other-modules:
    API
    Queries

  build-depends:  raffleize
  build-depends:
    , aeson-pretty
    , bytestring
    , http-types
    , lens
    , mtl
    , servant-server
    , servant-swagger
    , swagger2
    , transformers
    , wai
    , wai-cors
    , warp

  --- Cardano specific dependencies
  build-depends:  atlas-cardano

executable tui
  import:         common
  main-is:        Main.hs
  hs-source-dirs: src/RaffleizeDApp/TUI
  ghc-options:    -Werror -threaded -rtsopts -with-rtsopts=-T
  other-modules:
    Actions
    RaffleizeWidgets
    Types
    UI

  build-depends:  raffleize
  build-depends:
    , aeson
    , ansi-terminal
    , brick
    , bytestring
    , extra
    , lens
    , mtl
    , text
    , time
    , vector
    , vty

  --- Cardano specific dependenciesƒ
  build-depends:
    , atlas-cardano
    , plutus-core
    , plutus-ledger-api
    , plutus-tx

executable psgen
  import:         common
  main-is:        Main.hs
  hs-source-dirs: src/RaffleizeDApp/CodeGen
  ghc-options:    -Werror -threaded -rtsopts -with-rtsopts=-T
  other-modules:
    PSTypes
    TypeBridges

  build-depends:  raffleize
  build-depends:
    , lens
    , mtl
    , purescript-bridge

test-suite tests
  import:         common
  main-is:        Main.hs
  hs-source-dirs: src/RaffleizeDApp/Tests
  type:           exitcode-stdio-1.0
  ghc-options:    -Werror -threaded -rtsopts -with-rtsopts=-T
  other-modules:
    PropertyTests
    TestRuns
    UnitTests

  build-depends:  raffleize
  build-depends:
    , extra
    , mtl
    , tasty
    , tasty-quickcheck

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , cardano-simple
    , plutus-ledger-api
    , plutus-simple-model
    , plutus-tx
