cabal-version: 3.0
name:          raffleize
version:       3.0.0.0
author:        Marius Georgescu
maintainer:    georgescumarius@live.com

common common
  ghc-options:        -Wall
  default-language:   GHC2021
  build-depends:      base >=4.18.2.0 && <5
  mixins:             base hiding (Prelude)
  default-extensions:
    DataKinds
    LambdaCase
    OverloadedStrings
    RecordWildCards

common plinth-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

  default-language:   Haskell2010

  -- all Plinth modules should use the following GHC flags
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-full-laziness -fno-spec-constr -fno-specialise -fno-strictness
    -fno-unbox-strict-fields -fno-unbox-small-strict-fields
    -fconstraint-solver-iterations=0

  -- 
  ghc-options:        -fobject-code -fplugin-opt PlutusTx.Plugin:defer-errors

  -- set target plutus-core version
  ghc-options:        -fplugin-opt PlutusTx.Plugin:target-version=1.1.0

  -- Compiler flags (defaults)
  ghc-options:        -fplugin-opt PlutusTx.Plugin:no-remove-trace
  ghc-options:        -fplugin-opt PlutusTx.Plugin:no-optimize
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
  import:          common,   plinth-ghc-options
  exposed-modules:
    Prelude
    RaffleizeDApp.Constants
    RaffleizeDApp.CustomTypes.ActionTypes
    RaffleizeDApp.CustomTypes.RaffleTypes
    RaffleizeDApp.CustomTypes.TicketTypes
    RaffleizeDApp.CustomTypes.TransferTypes
    RaffleizeDApp.CustomTypes.Types
    RaffleizeDApp.OnChain.RaffleizeLogic
    RaffleizeDApp.OnChain.RaffleizeMintingPolicy
    RaffleizeDApp.OnChain.RaffleizeTicketValidator
    RaffleizeDApp.OnChain.RaffleizeValidator
    RaffleizeDApp.OnChain.Utils
    RaffleizeDApp.TxBuilding.Context
    RaffleizeDApp.TxBuilding.Exceptions
    RaffleizeDApp.TxBuilding.Interactions
    RaffleizeDApp.TxBuilding.Lookups
    RaffleizeDApp.TxBuilding.Operations
    RaffleizeDApp.TxBuilding.Skeletons
    RaffleizeDApp.TxBuilding.Transactions
    RaffleizeDApp.TxBuilding.Utils
    RaffleizeDApp.TxBuilding.Validators
    RaffleizeDApp.Utils

  other-modules:
  hs-source-dirs:  src

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , cardano-api
    , cardano-binary
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

  build-depends:
    , aeson              ^>=2.2.3
    , extra
    , generic-arbitrary
    , mtl                ^>=2.3.1
    , swagger2           ^>=2.8.9
    , text               ^>=2.0.2

executable server
  import:         common
  main-is:        Main.hs
  hs-source-dirs: src/RaffleizeDApp/Server
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  other-modules:
    RestAPI
    WebsocketsAPI

  build-depends:  raffleize
  build-depends:
    , aeson-pretty
    , bytestring            ^>=0.11.5
    , conduit
    , http-types            ^>=0.12.4
    , lens                  ^>=5.2.3
    , mtl
    , servant-conduit
    , servant-event-stream
    , servant-server
    , servant-swagger
    , swagger2
    , text
    , transformers          ^>=0.6.1
    , utf8-string
    , wai
    , wai-cors
    , wai-websockets
    , warp
    , websockets

  --- Cardano specific dependencies
  build-depends:  atlas-cardano

executable tui
  import:         common
  main-is:        Main.hs
  hs-source-dirs: src/RaffleizeDApp/TUI
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  other-modules:
    Actions
    RaffleizeWidgets
    Types
    UI

  build-depends:  raffleize
  build-depends:
    , aeson
    , ansi-terminal
    , brick
    , bytestring
    , extra
    , lens
    , mtl
    , text           ^>=2.0.2
    , time           ^>=1.12.2
    , vector         ^>=0.13.1
    , vty

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , plutus-core
    , plutus-ledger-api
    , plutus-tx

executable psgen
  import:         common
  main-is:        Main.hs
  hs-source-dirs: src/RaffleizeDApp/CodeGen
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  other-modules:
    PSTypes
    TypeBridges

  build-depends:  raffleize
  build-depends:
    , lens
    , mtl
    , purescript-bridge

test-suite tests
  import:         common
  main-is:        Main.hs
  hs-source-dirs: src/RaffleizeDApp/Tests
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded -rtsopts -with-rtsopts=-T
  other-modules:
    PropertyTests
    TestRuns
    UnitTests

  build-depends:  raffleize
  build-depends:
    , extra
    , mtl
    , tasty
    , tasty-quickcheck

  --- Cardano specific dependencies
  build-depends:
    , atlas-cardano
    , clb
    , plutus-ledger-api
    , plutus-tx
